--- a/Rat Swarm Optimization/doc/main.tex
+++ b/Rat Swarm Optimization/doc/main.tex
@@ -13,7 +13,7 @@
 
 \input{prefix/title.tex}
 
-\input{prefix/abbreviation.tex}  
+% \input{prefix/abbreviation.tex}  
 
 % \listoffigures
 
@@ -38,7 +38,7 @@
 % \nocite{*}
 
 \appendix
-\input{assets/anhang.tex}
+% \input{assets/anhang.tex}
 
 \backmatter
 
