add generic levels for eho

--- a/Rat Swarm Optimization/doc/prefix/title.tex
+++ b/Rat Swarm Optimization/doc/prefix/title.tex
@@ -46,12 +46,12 @@
     % \chapter*{Anmerkung Bilder/Screenshots}
     % Bilder und Screenshots in dieser Arbeit wurden bewusst ohne Daten erstellt, um den datenschutzrechtlichen Bestimmungen zu entsprechen. Falls dies nicht möglich war, wurden Bereiche mit personenbezogenen Daten geschwärzt.
 
-    \chapter*{Ehrenw\"ortliche Erkl\"arung}
+    % \chapter*{Ehrenw\"ortliche Erkl\"arung}
 
-    \thispagestyle{empty}
-    Ich versichere hiermit, dass ich diese Arbeit selbstständig verfasst und keine anderen als die angegebenen Quellen und Hilfsmittel benutzt habe. \\
-    Ich versichere zudem, dass die eingereichte elektronische Fassung mit der gedruckten Fassung übereinstimmt.\\
-    \\
+    % \thispagestyle{empty}
+    % Ich versichere hiermit, dass ich diese Arbeit selbstständig verfasst und keine anderen als die angegebenen Quellen und Hilfsmittel benutzt habe. \\
+    % Ich versichere zudem, dass die eingereichte elektronische Fassung mit der gedruckten Fassung übereinstimmt.\\
+    % \\
     Buchen, \today
     \newpage
     \vspace{5mm}
