--- a/Elephant Herding Optimization/doc/main.tex
+++ b/Elephant Herding Optimization/doc/main.tex
@@ -13,7 +13,7 @@
 
 \input{prefix/title.tex}
 
-\input{prefix/abbreviation.tex}  
+% \input{prefix/abbreviation.tex}  
 
 % \listoffigures
 
@@ -23,8 +23,8 @@
 
 \mainmatter
 
-\input{chapters/chapter0_Abstract.tex}
-% \input{chapters/chapter1_Einordnung.tex}
+\input{chapters/chapter0_Einleitung.tex}
+\input{chapters/chapter1_Optimierung.tex}
 % \input{chapters/chapter2_Einleitung.tex}
 % \input{chapters/chapter3_Planung.tex}
 % \input{chapters/chapter4_Durchfuehrung.tex}
@@ -38,7 +38,7 @@
 % \nocite{*}
 
 \appendix
-\input{assets/anhang.tex}
+% \input{assets/anhang.tex}
 
 \backmatter
 
